[tool.poetry]
name = "lntool"
version = "0.1.0"
description = ""
authors = ["Petteri Vaarala <petteri.vaarala@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.15.0"
click = "^7.1.2"
PyYAML = "^5.3.1"
Jinja2 = "^2.11.2"
httpx = "^0.16.1"
rich = "^9.1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
